http client moved to incubator for b149